# ftlog

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README-zh.md  README.md
.github/workflows/: CI.yml  linux.yml
benches/: format.rs  lazy-format.rs  string-format.rs
examples/: complex.rs  custom-format.rs  env_log.rs  ftlog.rs  lazy-bench.rs  multi-dest.rs  random_drop.rs  stderr.rs  string-bench.rs  udp-log.rs
src/: lib.rs  macros.rs
src/appender/: file.rs  mod.rs  udp.rs
src/writer/: file_split.rs  mod.rs
tests/: local_tz.rs  speed.rs  utc.rs
