[package]
name = "ftlog"
version = "0.2.4"
edition = "2021"
authors = [ "Non-convex Tech" ]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nonconvextech/ftlog"
documentation = "https://docs.rs/ftlog"
description = """
An asynchronous logging library for high performance
"""
categories = [ "development-tools::debugging" ]
keywords = [ "logging" ]
exclude = [ ".standard-version", ".versionrc", ".github" ]

[dependencies]
time = { version = "0.3", features = [ "local-offset" ] }
crossbeam-channel = "0.5.0"
hashbrown = "0.13"
arc-swap = "1"

  [dependencies.log]
  version = "0.4"
  features = [ "std", "kv_unstable" ]

[[bench]]
name = "lazy-format"

[[bench]]
name = "string-format"
